feat(pantries): Created pantries module + updated readme
