# cmd/server/docs/swagger.yaml
@@ -1,5 +1,12 @@
 basePath: /
 definitions:
+  dto.CreatePantryRequest:
+    properties:
+      name:
+        type: string
+    required:
+    - name
+    type: object
   dto.LoginRequest:
     properties:
       email:
@@ -10,15 +17,50 @@ definitions:
     - email
     - password
     type: object
+  dto.ModifyPantryUserRequest:
+    properties:
+      user_id:
+        type: string
+    required:
+    - user_id
+    type: object
+  dto.PantryResponse:
+    properties:
+      id:
+        type: string
+      name:
+        type: string
+      owner_id:
+        type: string
+    type: object
+  dto.PantryUserResponse:
+    properties:
+      email:
+        type: string
+      role:
+        type: string
+      user_id:
+        type: string
+    type: object
   dto.RegisterRequest:
     properties:
       email:
+        type: string
+      name:
         type: string
       password:
         type: string
     required:
     - email
+    - name
     - password
+    type: object
+  dto.UpdatePantryRequest:
+    properties:
+      name:
+        type: string
+    required:
+    - name
     type: object
   response.APIError:
     properties:
@@ -68,7 +110,6 @@ definitions:
   response.UserListResponseWrapper:
     properties:
       data:
-        description: ideal seria []dto.UserResponse
         items: {}
         type: array
       error:
@@ -78,8 +119,7 @@ definitions:
     type: object
   response.UserResponseWrapper:
     properties:
-      data:
-        description: ideal seria dto.UserResponse, mas isso evita import circular
+      data: {}
       error:
         $ref: '#/definitions/response.APIError'
       success:
@@ -201,6 +241,242 @@ paths:
       summary: Register a new user
       tags:
       - Authentication
+  /pantries:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/dto.PantryResponse'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.APIResponse'
+      summary: List all pantries from the current user
+      tags:
+      - Pantry
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Pantry data
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/dto.CreatePantryRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/dto.PantryResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.APIResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.APIResponse'
+      summary: Create a new pantry
+      tags:
+      - Pantry
+  /pantries/{id}:
+    delete:
+      parameters:
+      - description: Pantry ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.MessageResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.APIResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.APIResponse'
+      summary: Soft delete a pantry
+      tags:
+      - Pantry
+    get:
+      parameters:
+      - description: Pantry ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.PantryResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.APIResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/response.APIResponse'
+      summary: Get a specific pantry
+      tags:
+      - Pantry
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: Pantry ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: New name
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/dto.UpdatePantryRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.MessageResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.APIResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.APIResponse'
+      summary: Update pantry name
+      tags:
+      - Pantry
+  /pantries/{id}/users:
+    delete:
+      consumes:
+      - application/json
+      parameters:
+      - description: Pantry ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: User to remove
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/dto.ModifyPantryUserRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.MessageResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.APIResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/response.APIResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.APIResponse'
+      summary: Remove a user from the pantry
+      tags:
+      - Pantry
+    get:
+      parameters:
+      - description: Pantry ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/dto.PantryUserResponse'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.APIResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/response.APIResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.APIResponse'
+      summary: List users in a pantry
+      tags:
+      - Pantry
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Pantry ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: User to add
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/dto.ModifyPantryUserRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.MessageResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.APIResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/response.APIResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.APIResponse'
+      summary: Add a user to the pantry
+      tags:
+      - Pantry
   /user/{id}:
     get:
       parameters:
